@@ -5,6 +5,9 @@ Hadoop MapReduce Change Log
     MAPREDUCE-6213. NullPointerException caused by job history server addr not
     resolvable. (Peng Zhang via harsh)
 
+    MAPREDUCE-5649. Reduce cannot use more than 2G memory for the final merge
+    (Gera Shegalov via jlowe)
+
 Release 2.7.0 - 2015-04-20
   NEW FEATURES
 
